2021-05-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m-queries-log-file): Use expand-file-name for variable
	default definition.

2021-05-04  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-select): BUGFIX for regex such as ".*$"

2021-05-04  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download--resolve-ambiguous-basenames)
	(w3m-download--respect-query-basename, w3m--download-create-basename):
	New functions.
	(w3m--download-validate-basename, w3m-download-using-wget): Use them.

2021-05-04  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m-queries-log-file): Improve defcustom.
	(w3m--url-get-queries): New function.
	(w3m--url-strip-unwanted-queries): Improve name of function. was
	w3m--url-strip-queries.

	* w3m.el (w3m--retrieve-1--handler-function)
	(w3m--goto-url--valid-url): Apply new function name.

2021-04-29  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-progress-percent-display): Begin
	search at point-min.

2021-04-21  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-delete-line): Add prefix arg option to
	delete multiple lines

2021-04-21  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-header-prefix): Remove constant.
	(w3m--download-queue-header-prefix)
	(w3m--download-select-header-prefix): Replacement constants.
	(w3m-download-queue-help): Remove function.
	(w3m-download-help): Replacement function.
	(w3m-download-select-mode-map, w3m-download-queue-mode-map): Give it keybindings.
	(w3m-download-selected, w3m-download-paused, w3m-download-completed):
	Ensure no underlines in these faces.
	(w3m--download-update-statistics, w3m-download-select-mode): Fix
	header-line for session buffers.
	(w3m-download-select): Remove help hints from select buffers.

2021-04-20  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-toggle-line-wrap): New function.
	(w3m-download-queue-mode-map): Add it to keymap.